@@ -5,6 +5,7 @@ BUG: Ticket#841 - Strange output from THttpResponse (Christophe)
 BUG: Ticket#847 - getBaseUrl sometimes fails (Christophe)
 BUG: Ticket#843 - TDataList alternatinItem issue after changes in rev 2227 (Christophe)
 BUG: Ticket#849 - TDatePicker selecting current date problem (Christophe)
+ENH: Added Prado.Validation.validateControl(id) on client side to validate a specific control (Michael)
 
 Version 3.1.2 April 21, 2008
 ============================
